--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>Churrascometro</title>
 
 </head>
@@ -13,7 +14,7 @@
 <body>
 
     <div class="container">
-        <h1>Churrascômetro</h1>
+        <h1>Churrascômetro <img src="./images/23F0.svg" alt="clock"></h1>
 
         <input type="number" id="adults" name="adults" placeholder="Adultos" required>
         <input type="number" id="kids" name="kids" placeholder="Crianças" required>
@@ -22,7 +23,7 @@
         <button type="submit">Calcular</button>
 
         <div id="results">
-            
+
         </div>
     </div>
 
