calculo de 'total de carne' e 'carne por pessoa'

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="number" id="kids" name="kids" placeholder="Crianças" required>
         <input type="number" id="duration" name="duration" placeholder="Duração (in hours)" required>
 
-        <button type="submit">Calcular</button>
+        <button onclick="calculate()" type="submit">Calcular</button>
 
         <div id="results">
 
