--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;900&display=swap" rel="stylesheet">
     <title>Churrascometro</title>
 
 </head>
@@ -15,6 +15,7 @@
 
     <div class="container">
         <h1>Churrascômetro <img src="./images/23F0.svg" alt="clock"></h1>
+        <h3>Welcome back!</h2>
 
         <input type="number" id="adults" name="adults" placeholder="Adultos" required>
         <input type="number" id="kids" name="kids" placeholder="Crianças" required>
