--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;900&display=swap" rel="stylesheet">
-    <title>Churrascometro</title>
+    <title>Churrascômetro</title>
 
 </head>
 
 <body>
 
     <div class="container">
-        <h1>Churrascômetro <img src="./images/23F0.svg" alt="clock"></h1>
+        <h1>Churrascômetro <img src="./images/cuts-of-beef.png" alt=""></h1>
         <h3>Welcome back!</h2>
 
-        <input type="number" id="adults" name="adults" placeholder="Adultos" required>
-        <input type="number" id="kids" name="kids" placeholder="Crianças" required>
-        <input type="number" id="duration" name="duration" placeholder="Duração (in hours)" required>
+        <input type="number" id="adults" name="adults" placeholder="Adults" required>
+        <input type="number" id="kids" name="kids" placeholder="Kids" required>
+        <input type="number" id="duration" name="duration" placeholder="Duration (in hours)" required>
 
-        <button onclick="calculate()" type="submit">Calcular</button>
+        <button onclick="calculate()" type="submit">Calculate</button>
 
         <div id="results">
 
