--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;900&display=swap" rel="stylesheet">
-    <title>Churrascômetro</title>
+    <link rel="icon" href="./images/cuts-of-beef.png">
+    <title>Cuts of beef</title>
 
 </head>
 
 <body>
 
     <div class="container">
-        <h1>Churrascômetro <img src="./images/cuts-of-beef.png" alt=""></h1>
+        <h1>Cuts of Beef <img src="./images/cuts-of-beef.png" alt=""></h1>
         <h3>Welcome back!</h2>
 
         <input type="number" id="adults" name="adults" placeholder="Adults" required>
