criando animacao de pre carregamento na pagina

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
 </head>
 
-<body>
+<body onload="preLoading()">
+
+    <div class="preload">
+        <div class="loadingEffect"></div>
+    </div>
 
     <div class="container">
         <h1>Cuts of Beef <img src="./images/cuts-of-beef.png" alt=""></h1>
